--- a/teste/index.html
+++ b/teste/index.html
@@ -7,13 +7,41 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <div>
-            <h2>SLACA 2019</h2>
-        </div>
-        <p>Anais do Simpósio Latino Americano de C</p>
-        <h3>Anais do 13 Simpósio Latino Americano de CiÊncia de alimentos</h3>
-        <h4>ISSN: 1234-5678</h4>
-    </header>
+    <div class="container">
+        <header> 
+            <main>
+                <h2>SLACA 2019</h2>  
+                <aside>
+                    <ul>
+                        <a href="#"><li>Apresentação</li></a>
+                        <a href="#"><li>Comitês</li></a>
+                        <a href="#"><li>Autores</li></a>
+                        <a href="#"><li>Eixos temáticos</li></a>
+                        <a href="#"><li>Trabalhos</li></a>
+                        <a href="#"> <li>Contatos</li></a>
+                    </ul>
+                </aside>
+            </main>
+               
+                <nav>
+                <div class="elementos">
+                    <p>Anais do simpósio Latino Americano de Alimentos</p>
+                    <h4>Anais do 13 Simpósio Latino Americano de Ciência de Alimentos</h4>
+                    <p>ISSN: 1234-5678</p>
+                </div>
+                <select id="idiomas">
+                    <option>PT-BR</option>
+                    <option>ENG</option>
+                    <option>ESP</option>
+                    <option>CHI</option>
+                </select>
+                    <div class="welcome">
+                        <p>Bem vindo!</p>
+                        <p>test@teste@gmail.com</p>
+                    </div>
+            </nav> 
+        </header>
+       
+    </div>
 </body>
 </html>
