--- a/teste/index.html
+++ b/teste/index.html
@@ -6,41 +6,52 @@
     <link rel="stylesheet" href="estilos/style.css">
     <title>Document</title>
 </head>
-<body>
-    <div class="container">
-        <header> 
-            <main>
-                <h2>SLACA 2019</h2>  
-                <aside>
-                    <ul>
-                        <a href="#"><li>Apresentação</li></a>
-                        <a href="#"><li>Comitês</li></a>
-                        <a href="#"><li>Autores</li></a>
-                        <a href="#"><li>Eixos temáticos</li></a>
-                        <a href="#"><li>Trabalhos</li></a>
-                        <a href="#"> <li>Contatos</li></a>
-                    </ul>
-                </aside>
-            </main>
-               
+<body>    
+    <div class="container">               
                 <nav>
+                    <header>
+                       <div class="aside">
+                        <main>
+                            <h2>SLACA 2019</h2>  
+                            <img src="../img/slaca.jpg" alt="#" class="img">
+                            <aside>
+                                <ul>
+                                    <a href="#"><li>Apresentação</li></a>
+                                    <a href="#"><li>Comitês</li></a>
+                                    <a href="#"><li>Autores</li></a>
+                                    <a href="#"><li>Eixos temáticos</li></a>
+                                    <a href="#"><li>Trabalhos</li></a>
+                                    <a href="#"> <li>Contatos</li></a>
+                                </ul>
+                            </aside>
+                        </main>
+                       </div>
+
                 <div class="elementos">
                     <p>Anais do simpósio Latino Americano de Alimentos</p>
                     <h4>Anais do 13 Simpósio Latino Americano de Ciência de Alimentos</h4>
                     <p>ISSN: 1234-5678</p>
                 </div>
-                <select id="idiomas">
-                    <option>PT-BR</option>
-                    <option>ENG</option>
-                    <option>ESP</option>
-                    <option>CHI</option>
-                </select>
+                    <select id="idiomas">
+                        <option>PT-BR</option>
+                        <option>ENG</option>
+                        <option>ESP</option>
+                        <option>CHI</option>
+                    </select>
                     <div class="welcome">
                         <p>Bem vindo!</p>
                         <p>test@teste@gmail.com</p>
-                    </div>
+                </div>
             </nav> 
         </header>
+        <div class="container1">
+                <section>
+                    <h3>Análise sensorial de preparações funcionais desenvolvidas para escolares 
+                    <br>
+                    entre 09 a 15 anos, município de campinas/SP</h3>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IBIIRyGg628?si=4kptjrZR_Rx13CQI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </section>
+        </div>
        
     </div>
 </body>
