--- a/3_CORE_MODULES/6_escrevendo_arquivos/index.html
+++ b/3_CORE_MODULES/6_escrevendo_arquivos/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escrevendo em arquivo</title>
+    <title>Escrevendo em arquivos</title>
 </head>
 <body>
-    
+    <h1>Como você se chama?</h1>
+    <form action="/" method="GET">
+        <input type="text" name="name" placeholder="Digite o seu nome">
+        <input type="submit" value="Enviar">
+    </form>
 </body>
 </html>
